# nebulastudio

./: .gitignore  README.md  pyproject.toml  requirements.txt
nebulastudio/: __main__.py  alignment.py  application.py  diff.py  image.py  nebulaimage.py  nebulastudio.py  toolbars.py  viewer.py
nebulastudio/dockwidgets/: image_alignment.py  images_properties.py  viewers_selection.py
tests/: test_diff.py  test_nebulaimage.py  test_toolbar.py
