[project]
name = "donjon-nebulastudio"

dynamic = ["version"]
description = "Tool for observing differential images"
authors = [{ name = "Michaël Mouchous", email = "michael.mouchous@ledger.fr" }]
license = { text = "LGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqt6 (>=6.8.1,<7.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.poetry]
packages = [{ include = "nebulastudio" }]
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[project.scripts]
"nebulastudio" = "nebulastudio.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
